--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "day5": "ts-node-dev --respawn --transpileOnly ./src/day5.ts",
     "day6": "ts-node-dev --respawn --transpileOnly ./src/day6.ts",
     "day7": "ts-node-dev --respawn --transpileOnly ./src/day7.ts",
+    "day8": "ts-node-dev --respawn --transpileOnly ./src/day8.ts",
     "build": "tsc"
   },
   "keywords": [],
