--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "day8": "ts-node-dev --respawn --transpileOnly ./src/day8.ts",
     "day9": "ts-node-dev --respawn --transpileOnly ./src/day9.ts",
     "day10": "ts-node-dev --respawn --transpileOnly ./src/day10.ts",
+    "day11": "ts-node-dev --respawn --transpileOnly ./src/day11.ts",
+    "day12": "ts-node-dev --respawn --transpileOnly ./src/day12.ts",
     "build": "tsc"
   },
   "keywords": [],
